added comments to JS, made checkbox function cleaner

--- a/letsDoThis.html
+++ b/letsDoThis.html
@@ -2,19 +2,14 @@
 <html>
 
 <head>
-
-  <title></title>
-
-<link rel="stylesheet" type="text/css" href="https://bootswatch.com/paper/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>To Do</title>
+  <link rel="stylesheet" type="text/css" href="https://bootswatch.com/paper/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
-
 <body>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3">
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <div class="col-md-6">
         <form class="form-inline">
           <div class="form-group">
             <input type="text" class="form-control" id="newThing" placeholder="What do you need to do?" autocomplete=/>
@@ -22,7 +17,7 @@
           <button type="submit" class="btn btn-primary">add</button>
         </form>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-6">
         <table class="table-bordered ">
             <thead>
               <tr>
