--- a/letsDoThis.html
+++ b/letsDoThis.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container-fluid">
     <div class="row-fluid">
-      <div class="col-md-6">
+      <div class="col-md-3">
         <form class="form-inline">
           <div class="form-group">
             <input type="text" class="form-control" id="newThing" placeholder="What do you need to do?" autocomplete=/>
@@ -17,11 +17,11 @@
           <button type="submit" class="btn btn-primary">add</button>
         </form>
       </div>
-      <div class="col-md-6">
-        <table class="table-bordered ">
+      <div class="col-md-4">
+        <table class="table-bordered">
             <thead>
               <tr>
-                <th colspan="6">Let's get this done</th>
+                <th colspan="3">Let's get this done</th>
               </tr>
             </thead>
             <tbody></tbody>
@@ -30,8 +30,7 @@
     </div>
   </div>
 
- <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <!--<script type="text/javascript" src= "java/buttons.js"></script>-->
-  <script type="text/javascript" src="java/shamoon.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src= "java/button.js"></script>
 </body>
 </html>
