--- a/letsDoThis.html
+++ b/letsDoThis.html
@@ -9,28 +9,23 @@
 <body>
   <div class="container-fluid">
     <div class="row-fluid">
-      <div class="col-md-3">
+      <div class="col-md-4 col-md-offset-4 boxList">
         <form class="form-inline">
           <div class="form-group">
             <input type="text" class="form-control" id="newThing" placeholder="What do you need to do?" autocomplete=/>
+            <button type="submit" class="btn btn-primary">add</button>
           </div>
-          <button type="submit" class="btn btn-primary">add</button>
+          
         </form>
-      </div>
-      <div class="col-md-4">
-        <table class="table-bordered">
-            <thead>
-              <tr>
-                <th colspan="3">Let's get this done</th>
-              </tr>
-            </thead>
+        <table class="todoTable">
+            
             <tbody></tbody>
-        </table>        
+        </table>     
       </div>
     </div>
   </div>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src= "java/button.js"></script>
+  <script type="text/javascript" src= "javascript/button.js"></script>
 </body>
 </html>
