--- a/letsDoThis.html
+++ b/letsDoThis.html
@@ -31,6 +31,6 @@
   </div>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src= "java/button.js"></script>
+  <script type="text/javascript" src= "javascript/button.js"></script>
 </body>
 </html>
